[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enable-console"
version = "1.0.0"
description = "Patches Windows Executables to force the Console Subsystem"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Yaron Koresh"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/YaronKoresh/enable-console"
Repository = "https://github.com/YaronKoresh/enable-console"
Issues = "https://github.com/YaronKoresh/enable-console/issues"
